templates: add link to detail view for users in index template

--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -12,7 +12,9 @@
             {% for user in users_list %}
             <tr>
               <td>{{user.id}}</td>
-              <td>{{user.username}}</td>
+              <td>
+                  <a href={% url 'users:users_detail' user.pk %}> {{user.username}}
+              </td>
               <td>{{user}}</td>
             </tr>
             {% endfor %}
