--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -1,3 +1,22 @@
+{% load bootstrap4 %}
+
+
+{% bootstrap_messages %}
+
+{% if user.is_authenticated %}
+    <div>
+        Current user:
+            <a href="{% url 'users:users_detail' user.pk %}">{{user}}</a>
+    </div>
+{% endif %}
+
+<p><a href="{% url 'users:login' %}">Login</a></p>
+
+
+<p><a href="{% url 'users:logout' %}">Logout</a></p>
+
+
+
 <h2>Users</h2>
     <div class="table-responsive">
         <table class="table table-striped table-sm" cellpadding="7">
