--- a/games/templates/games_detail.html
+++ b/games/templates/games_detail.html
@@ -1,27 +1,26 @@
-{% load bootstrap4 %}
+{% extends "base.html" %}
 
-<body class="text-center">
-<table border="2" align="center" class="row h-auto mb-4" cellpadding="7">
-	<tr>
-		<th>Game ID</th>
-		<th>Name</th>
-		<th>Players</th>
-		<th>Summary</th>
-	</tr>
-		<tr>
-			<td>{{ game.id }}</td>
-			<td>{{ game.name }}</td>
-			<td>
-				{% for player in users %}
-					<p>{{ player.username }}<p/>
-				{% endfor %}
-			</td>
-			<td>
-				{% for item in scores.values %}
-					<p>{{ item }}</p>
-				{% endfor %}
-			</td>
-		<tr/>
-
-</table>
-</body>
+{% block content %}
+    <table>
+        <tr>
+            <th>Game ID</th>
+            <th>Name</th>
+            <th>Players</th>
+            <th>Summary</th>
+        </tr>
+        <tr>
+            <td>{{ game.id }}</td>
+            <td>{{ game.name }}</td>
+            <td>
+                {% for player in users %}
+                    <p>{{ player.username }}</p>
+                {% endfor %}
+            </td>
+            <td>
+                {% for item in scores.values %}
+                    <p>{{ item }}</p>
+                {% endfor %}
+            </td>
+        <tr></tr>
+    </table>
+{% endblock %}
