--- a/games/templates/games_index.html
+++ b/games/templates/games_index.html
@@ -1,27 +1,31 @@
-<h2>Games</h2>
+{% extends "base.html" %}
+
+{% block content %}
+    <h2>Games</h2>
     <div class="table-responsive">
-        <table class="table table-striped table-sm" cellpadding="7">
-          <thead>
+        <table class="table table-striped table-sm">
+            <thead>
             <tr>
-              <th>Game ID</th>
-              <th>Game name</th>
-              <th>All game sessions</th>
+                <th>Game ID</th>
+                <th>Game name</th>
+                <th>All game sessions</th>
             </tr>
-          </thead>
-          <tbody>
+            </thead>
+            <tbody>
             {% for game in games %}
-            <tr>
-              <td>{{game.pk}}</td>
-              <td>
-                  <a href={% url 'games:games_detail' game.pk %}>{{game.name}}
-              </td>
-              <td>
-                {% for session in game.sessions.all %}
-                    <p>{{ session }}</p>
-                {% endfor %}
-            </td>
-            </tr>
+                <tr>
+                    <td>{{ game.pk }}</td>
+                    <td>
+                        <a href={% url 'games:games_detail' game.pk %}>{{ game.name }}
+                    </td>
+                    <td>
+                        {% for session in game.sessions.all %}
+                            <p>{{ session }}</p>
+                        {% endfor %}
+                    </td>
+                </tr>
             {% endfor %}
-          </tbody>
+            </tbody>
         </table>
     </div>
+{% endblock %}
