--- a/users/templates/admin/log_in_out.html
+++ b/users/templates/admin/log_in_out.html
@@ -1,10 +1,10 @@
+{% extends "base.html" %}
 {% load bootstrap4 %}
+
+{% block content %}
     <form class="form-signin" method="post" action={% url "users:login" %}>
-    {% csrf_token %}
-    <h1 class="h3 mb-3 font-weight-normal">"Please, login"</h1>
-    {% bootstrap_form form %}
-
-    <button class="btn btn-lg btn-primary btn-block" type="submit" value="Войти">"Login"</button>
-
-  </body>
-</html>
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Войти">Login</button>
+    </form>
+{% endblock %}
