--- a/users/templates/user_update.html
+++ b/users/templates/user_update.html
@@ -1,7 +1,7 @@
+{% extends "base.html" %}
 {% load bootstrap4 %}
 
-    <h1 class="mb-4">"Update profile"</h1>
-
+{% block content %}
     <form method="POST" action="{% url 'users:users_update' object.id %}">
         {% csrf_token %}
         {% bootstrap_form form %}
@@ -9,3 +9,4 @@
             <input class="btn btn-primary" type="submit" value='Update'>
         </div>
     </form>
+{% endblock %}
