--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -1,42 +1,40 @@
+{% extends "base.html" %}
 {% load bootstrap4 %}
 
+{% block content %}
+    {% bootstrap_messages %}
 
-{% bootstrap_messages %}
+    {% if user.is_authenticated %}
+        <div>
+            Current user:
+            <a href="{% url 'users:users_detail' user.pk %}">{{ user }}</a>
+        </div>
+    {% endif %}
 
-{% if user.is_authenticated %}
-    <div>
-        Current user:
-            <a href="{% url 'users:users_detail' user.pk %}">{{user}}</a>
-    </div>
-{% endif %}
+    <p><a href="{% url 'users:login' %}">Login</a></p>
+    <p><a href="{% url 'users:logout' %}">Logout</a></p>
 
-<p><a href="{% url 'users:login' %}">Login</a></p>
-
-
-<p><a href="{% url 'users:logout' %}">Logout</a></p>
-
-
-
-<h2>Users</h2>
+    <h2>Users</h2>
     <div class="table-responsive">
-        <table class="table table-striped table-sm" cellpadding="7">
-          <thead>
+        <table>
+            <thead>
             <tr>
-              <th>User ID</th>
-              <th>Nickname</th>
-              <th>Name</th>
+                <th>User ID</th>
+                <th>Nickname</th>
+                <th>Name</th>
             </tr>
-          </thead>
-          <tbody>
+            </thead>
+            <tbody>
             {% for user in users_list %}
-            <tr>
-              <td>{{user.id}}</td>
-              <td>
-                  <a href={% url 'users:users_detail' user.pk %}> {{user.username}}
-              </td>
-              <td>{{user}}</td>
-            </tr>
+                <tr>
+                    <td>{{ user.id }}</td>
+                    <td>
+                        <a href={% url 'users:users_detail' user.pk %}>{{ user.username }}</a>
+                    </td>
+                    <td>{{ user }}</td>
+                </tr>
             {% endfor %}
-          </tbody>
+            </tbody>
         </table>
     </div>
+{% endblock %}
