--- a/games/templates/games_index.html
+++ b/games/templates/games_index.html
@@ -1,31 +1,42 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Games</h2>
-    <div class="table-responsive">
-        <table class="table table-striped table-sm">
-            <thead>
-            <tr>
-                <th>Game ID</th>
-                <th>Game name</th>
-                <th>All game sessions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for game in games %}
+    <div class="row mb-3">
+        <div class="col">
+            <h4>
+                <a href={% url 'games:games_index' %}>Games</a>
+            </h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <table class="table table-borderless">
+                <thead>
                 <tr>
-                    <td>{{ game.pk }}</td>
-                    <td>
-                        <a href={% url 'games:games_detail' game.pk %}>{{ game.name }}
-                    </td>
-                    <td>
-                        {% for session in game.sessions.all %}
-                            <p>{{ session }}</p>
-                        {% endfor %}
-                    </td>
+                    <th scope="col">#</th>
+                    <th scope="col">Game</th>
+                    <th scope="col">Sessions</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for game in games %}
+                    <tr>
+                        <th scope="row">{{ game.pk }}</th>
+                        <td>
+                            <a href={% url 'games:games_detail' game.pk %}>{{ game.name }}</a>
+                        </td>
+                        <td>
+                            <ul class="list-unstyled">
+                                {% for session in game.sessions.all %}
+                                    <li>{{ session }}</li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 {% endblock %}
