--- a/users/templates/log_in_out.html
+++ b/users/templates/log_in_out.html
@@ -2,9 +2,13 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <form class="form-signin" method="post" action={% url "users:login" %}>
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Войти">Login</button>
-    </form>
+    <div class="row justify-content-center">
+        <div class="col col-5">
+            <form class="form-signin" method="post" action={% url "users:login" %}>
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                <button class="btn btn-lg btn-primary btn-block" type="submit" value="Войти">Login</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
