--- a/users/templates/users_detail.html
+++ b/users/templates/users_detail.html
@@ -1,24 +1,44 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <table>
-        <tr>
-            <th>User ID</th>
-            <th>Nickname</th>
-            <th>Name</th>
-            <th>E-mail</th>
-            <th>Last 5 games played</th>
-        </tr>
-        <tr>
-            <td>{{ object.id }}</td>
-            <td>{{ object.username }}</td>
-            <td>{{ object }}</td>
-            <td>{{ object.email }}</td>
-            <td>
-                {% for game in last_five_games_played %}
-                    <a href={% url 'games:games_detail' game.pk %}>{{ game }}</a>
-                {% endfor %}
-            </td>
-        </tr>
-    </table>
+    <div class="row mb-3">
+        <div class="col">
+            <h4>
+                <a href={% url 'users:users_index' %}>Users</a> / {{ object.username }}
+            </h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <table class="table table-borderless">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th>Last 5 games played</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">
+                        {{ object.id }}
+                    </th>
+                    <td>
+                        {{ object.username }}
+                    </td>
+                    <td>
+                        {{ object.email }}
+                    </td>
+                    <td>
+                        {% for game in last_five_games_played %}
+                            <a href={% url 'games:games_detail' game.pk %}>{{ game }}</a>
+                        {% endfor %}
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
