Prepare chart to be more dynamic

--- a/Metrica_project/templates/snippets/charts_scripts.html
+++ b/Metrica_project/templates/snippets/charts_scripts.html
@@ -1,6 +1,10 @@
 {% load static %}
 
-<canvas id="myChart" width="400" height="400"></canvas>
+<div class="row">
+    <div class="col">
+        <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
+</div>
 
 {{ serverData|json_script:"serverData" }}
 
