--- a/Metrica_project/templates/base.html
+++ b/Metrica_project/templates/base.html
@@ -14,6 +14,10 @@
 
     <link href="{% static "css/custom.css" %}" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.bundle.min.js"
+        integrity="sha512-SuxO9djzjML6b9w9/I07IWnLnQhgyYVSpHZx0JV97kGBfTIsUYlWflyuW4ypnvhBrslz1yJ3R+S14fdCWmSmSA=="
+        crossorigin="anonymous"></script>
+
     <title>Metrica</title>
 </head>
 
