--- a/users/templates/user_register.html
+++ b/users/templates/user_register.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <form method="POST" action="{% url 'users:users_register' %}">
+    <form method="POST" enctype="multipart/form-data" action="{% url 'users:users_register' %}">
         {% csrf_token %}
         {% bootstrap_form form %}
         <div class="form-group">
