--- a/games/templates/games_detail.html
+++ b/games/templates/games_detail.html
@@ -20,7 +20,11 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-        <img src="{{ game.cover_art.url }}" class="card-img-top" alt="...">
+        {% if game.cover_art and game.cover_art.url %}
+            <img src="{{ game.cover_art.url }}" class="card-img-top" alt="...">
+        {% else %}
+            <img src="https://source.unsplash.com/random/400x300" class="card-img-top" alt="...">
+        {% endif %}
         <div class="card-body">
             <h5 class="card-title">{{ game.name }}</h5>
         </div>
