templates: add avatar in "user" templates

--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -19,6 +19,7 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
+                    <th scope="col">Avatar</th>
                     <th scope="col">Email</th>
                 </tr>
                 </thead>
@@ -29,6 +30,15 @@
                         <td>
                             <a href={% url 'users:users_detail' user.pk %}>{{ user.username }}</a>
                         </td>
+                        {% if user.avatar %}
+                            <td>
+                                <img src="{{ user.avatar.url }}" class="card-img-top" alt="...">
+                            </td>
+                        {% else %}
+                            <td>
+                                <img src="https://source.unsplash.com/random/400x300" class="card-img-top" alt="...">
+                            </td>
+                        {% endif %}
                         <td>{{ user.email }}</td>
                     </tr>
                 {% endfor %}
