feature: add quantity of game sessions by user on "game detail" pgae

--- a/games/templates/games_detail.html
+++ b/games/templates/games_detail.html
@@ -80,7 +80,7 @@
             <td>
                 <ul class="list-unstyled">
                     {% for user in played_games_by_players %}
-                        <li>{{ user.played_games_by_players }}</li>
+                        <li>{{ user.played_games_count }}</li>
                     {% endfor %}
                 </ul>
             </td>
