feature(infrastructure): Add frontend build infrastructure

--- a/Metrica_project/templates/base.html
+++ b/Metrica_project/templates/base.html
@@ -18,6 +18,8 @@
             integrity="sha512-SuxO9djzjML6b9w9/I07IWnLnQhgyYVSpHZx0JV97kGBfTIsUYlWflyuW4ypnvhBrslz1yJ3R+S14fdCWmSmSA=="
             crossorigin="anonymous"></script>
 
+    <script src="{% static 'main.js' %}"></script>
+
     <title>Metrica</title>
 </head>
 
