feature(frontend): add calendar for played games

--- a/users/templates/users_detail.html
+++ b/users/templates/users_detail.html
@@ -11,11 +11,25 @@
 
     <div class="row">
         <div class="col">
+            <canvas id="chart-area" height="300"></canvas>
+            {{ games | json_script:"games" }}
+            <script>
+                const data = JSON.parse(
+                    document.getElementById("games").textContent
+                );
+
+                window.initUserChart(data)
+            </script>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
             {% for game in games %}
                 <div class="card">
                     <div class="card-body">
                         <div class="media">
-                            <img class="mr-3" width="75" src="{{ game.cover.url }}" alt="game cover">
+                            <img class="mr-3" width="75" src="{{ game.cover }}" alt="game cover">
                             <div class="media-body">
                                 <h5 class="mt-0">{{ game.name }}</h5>
                                 <p>Played {{ game.times_played }} times with {{ game.total_score }} score total</p>
