fix: refactor user_list template to render correct users email

--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -10,7 +10,7 @@
                 {% if user.is_staff %}
                     <a href="{% url 'users:users_index' %}">Users</a>
                 {% else  %}
-                    <a href="{% url 'users:users_index' %}">You and your friends</a>
+                    <a href="{% url 'users:users_index' %}">Your wolf pack</a>
                 {% endif %}
             </h4>
         </div>
@@ -33,21 +33,21 @@
                         <th scope="row">{{ player.id }}</th>
                         <td>
                             {% if user.pk == player.pk %}
-                            <a href="{{ user.get_absolute_url }}">{{ user.username }}</a>
+                                <a href="{{ player.get_absolute_url }}">{{ player.username }}</a>
                             {% else %}
-                            {{ player.username }}
+                                {{ player.username }}
                             {% endif %}
                         </td>
-                        {% if user.avatar %}
+                        {% if player.avatar %}
                             <td>
-                                <img src="{{ user.avatar.url }}" class="card-img-top" alt="...">
+                                <img src="{{ player.avatar.url }}" class="card-img-top" alt="...">
                             </td>
                         {% else %}
                             <td>
                                 <img src="https://source.unsplash.com/random/400x300" class="card-img-top" alt="...">
                             </td>
                         {% endif %}
-                        <td>{{ user.email }}</td>
+                        <td>{{ player.email }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
