feature: refactor user_index template. Links to users detail_pages rendering for all kind of request.user, and on "view" layer is filtering which users detail_pages need to render - for "staff"-users - all users are available and for ordinary users - only their friends

--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -31,12 +31,17 @@
                 {% for player in users_list %}
                     <tr>
                         <th scope="row">{{ player.id }}</th>
+{% comment %}
                         <td>
-                            {% if user.pk == player.pk %}
+                            {% if user.pk == player.pk or user.is_staff %}
                                 <a href="{{ player.get_absolute_url }}">{{ player.username }}</a>
                             {% else %}
                                 {{ player.username }}
                             {% endif %}
+                        </td>
+{% endcomment %}
+                        <td>
+                            <a href="{{ player.get_absolute_url }}">{{ player.username }}</a>
                         </td>
                         {% if player.avatar %}
                             <td>
