feature: split the render on games_index page for owner of the user profile data, visitors and "is_staff" users. 1. For "is_staff" users will be able to see quantity of all sessions (public and private), but details who create private session will be available only for owner. 2. Scores and users for each metrica's on games_index page will be calculated and rendered only for public sessions

--- a/games/templates/games_index.html
+++ b/games/templates/games_index.html
@@ -29,7 +29,9 @@
                     <th scope="col">#</th>
                     <th scope="col">Game</th>
                     {% comment %}<th scope="col">Sessions</th>{% endcomment %}
-                    <th scope="col">Quantity </th>
+                    {% if user.is_staff %}
+                        <th scope="col">Quantity </th>
+                    {% endif %}
                     <th scope="col">Players</th>
                     <th scope="col">Scores</th>
                 </tr>
@@ -54,23 +56,29 @@
 {% endcomment %}
 
                         <td>
-                            {{ game.sessions.all.count }}
+                            {% if user.is_staff %}
+                                {{ game.sessions.all.count }}
+                            {% endif %}
                         </td>
 
 
                         <td>
                             {% for session in game.sessions.all %}
-                                {% for score in session.scores.all %}
-                                    {{ score.user }}
-                                {% endfor %}
+                                {% if not session.is_private %}
+                                    {% for score in session.scores.all %}
+                                        {{ score.user }}
+                                    {% endfor %}
+                                {% endif %}
                             {% endfor %}
                         </td>
 
                         <td>
                             {% for session in game.sessions.all %}
-                                {% for score in session.scores.all %}
-                                    {{ score.score }},
-                                {% endfor %}
+                                {% if not session.is_private %}
+                                    {% for score in session.scores.all %}
+                                        {{ score.score }},
+                                    {% endfor %}
+                                {% endif %}
                             {% endfor %}
                         </td>
 
